Fix long track name overflow

--- a/assets/css/blocks/track.css
+++ b/assets/css/blocks/track.css
@@ -16,4 +16,5 @@
 
 .track div {
   display: inline-block;
+  max-width: 66.66%;
 }
